--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<a href="#" class="thumbnail">
 				<img src="{{profilePic}}" alt="Lorem Pixel image" class="img">
 				<p>{{title}}</p>
+				<p>yeezy</p>
 				<div class="like"><button class="btn btn-default likeBtn">Like</button></div>
 			</a>
 		</div>
