--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Lab 5</h1>
+			<h1>changed this</h1>
 			<p>human-computer interaction design</p>
 		</div>
 
